tested on alonzo purple

--- a/cabal.project
+++ b/cabal.project
@@ -17,251 +17,251 @@ packages: .
 --    extra-lib-dirs:     /nix/store/qvgf4g9c5h3wzq4xjy566vc0pqgc9fjq-zlib-1.2.11/lib
 
 
--- package cryptonite
---   -- Using RDRAND instead of /dev/urandom as an entropy source for key
---   -- generation is dubious. Set the flag so we use /dev/urandom by default.
---   flags: -support_rdrand
--- 
--- package cardano-crypto-praos
---   flags: -external-libsodium-vrf
--- 
--- -- ---------------------------------------------------------
--- -- Disable all tests by default
--- 
--- tests: False
--- 
--- test-show-details: direct
--- 
--- -- Then enable specific tests in this repo
--- 
--- package cardano-api
---   tests: False
--- 
--- package cardano-cli
---   tests: False
--- 
--- package cardano-node
---   tests: False
--- 
--- package cardano-node-chairman
---   tests: False
--- 
--- package cardano-testnet
---   tests: False
--- 
--- -- The following is needed because Nix is doing something crazy.
--- package byron-spec-ledger
---   tests: False
--- 
--- package iohk-monitoring
---   tests: False
--- 
--- package ouroboros-consensus-test
---   tests: False
--- 
--- package ouroboros-consensus-cardano-test
---   tests: False
--- 
--- package ouroboros-network
---   tests: False
--- 
--- package ouroboros-network-framework
---   tests: False
--- 
--- package plutus-tx
---   tests: False
--- 
--- package prettyprinter-configurable
---   tests: False
--- 
--- package small-steps
---   tests: False
--- 
--- package small-steps-test
---   tests: False
--- 
--- package goblins
---   tests: False
--- 
--- package io-classes
---   tests: False
--- 
--- package cardano-ledger-alonzo-test
---   tests: False
--- 
--- -- ---------------------------------------------------------
--- 
--- -- The two following one-liners will cut off / restore the remainder of this file (for nix-shell users):
--- -- when using the "cabal" wrapper script provided by nix-shell.
--- -- --------------------------- 8< --------------------------
--- -- Please do not put any `source-repository-package` clause above this line.
--- 
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/cardano-node
---   tag: 708de685d49ec6af4b2d8b3cbfa0eca0e9e43edf
---   subdir:
---     cardano-api
--- 
--- -- Using a fork until our patches can be merged upstream
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/optparse-applicative
---   tag: 3876479d01d681ee529d1b26784335cbe0baf7cd
---   --sha256: 00gavws6jvl930rq09gs5rdwmyc4n42avk7p9s7pjv52d205v967
--- 
--- -- Using a fork until our patches can be merged upstream
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/criterion
---   tag: fb2e7be532db96255d203f86360230cae37130f3
---   --sha256: 14r9zkfa8zslky3969gaq27gi7yi9rlqv0h1iq7zam9l15z53vhr
--- 
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/hedgehog-extras
---   tag: edf6945007177a638fbeb8802397f3a6f4e47c14
---   --sha256: 0wc7qzkc7j4ns2rz562h6qrx2f8xyq7yjcb7zidnj7f6j0pcd0i9
--- 
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/cardano-base
---   tag: 8c732560b201b5da8e3bdf175c6eda73a32d64bc
---   --sha256: 0nwy03wyd2ks4qxg47py7lm18karjz6vs7p8knmn3zy72i3n9rfi
---   subdir:
---     base-deriving-via
---     binary
---     binary/test
---     cardano-crypto-class
---     cardano-crypto-praos
---     cardano-crypto-tests
---     measures
---     orphans-deriving-via
---     slotting
---     strict-containers
--- 
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/cardano-crypto
---   tag: f73079303f663e028288f9f4a9e08bcca39a923e
---   --sha256: 1n87i15x54s0cjkh3nsxs4r1x016cdw1fypwmr68936n3xxsjn6q
--- 
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/cardano-ledger-specs
---   tag: 30eca73a2f5c13f1fbed9a98a59540ac3d0c8afe
---   --sha256: 02klj4zpcl98p22n2v9nkjxxdf8mmw069mw4ddhlgr931bfigz6w
---   subdir:
---     alonzo/impl
---     byron/chain/executable-spec
---     byron/crypto
---     byron/crypto/test
---     byron/ledger/executable-spec
---     byron/ledger/impl
---     byron/ledger/impl/test
---     cardano-ledger-core
---     semantics/executable-spec
---     semantics/small-steps-test
---     shelley/chain-and-ledger/dependencies/non-integer
---     shelley/chain-and-ledger/executable-spec
---     shelley/chain-and-ledger/shelley-spec-ledger-test
---     shelley-ma/impl
---     shelley-ma/shelley-ma-test
--- --TODO: disabled until it drops its dep on plutus-tx-plugin
--- --  alonzo/test
--- 
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/cardano-prelude
---   tag: bb4ed71ba8e587f672d06edf9d2e376f4b055555
---   --sha256: 00h10l5mmiza9819p9v5q5749nb9pzgi20vpzpy1d34zmh6gf1cj
---   subdir:
---     cardano-prelude
---     cardano-prelude-test
--- 
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/goblins
---   tag: cde90a2b27f79187ca8310b6549331e59595e7ba
---   --sha256: 17c88rbva3iw82yg9srlxjv2ia5wjb9cyqw44hik565f5v9svnyg
--- 
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/iohk-monitoring-framework
---   tag: 808724ff8a19a33d0ed06f9ef59fbd900b08553c
---   --sha256: 0298dpl29gxzs9as9ha6y0w18hqwc00ipa3hzkxv7nlfrjjz8hmz
---   subdir:
---     contra-tracer
---     iohk-monitoring
---     plugins/backend-aggregation
---     plugins/backend-ekg
---     plugins/backend-monitoring
---     plugins/backend-trace-forwarder
---     plugins/scribe-systemd
---     tracer-transformers
--- 
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/Win32-network
---   tag: 3825d3abf75f83f406c1f7161883c438dac7277d
---   --sha256: 19wahfv726fa3mqajpqdqhnl9ica3xmf68i254q45iyjcpj1psqx
--- 
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/ouroboros-network
---   tag: e9cda57df7ea6969edbc3bfc4e117668277d09c8
---   --sha256: 1a91z6yvlhzlqrf7fy51fmmpm3ssk684h6pjgg022cdlsq56yif2
---   subdir:
---     io-sim
---     io-classes
---     monoidal-synchronisation
---     network-mux
---     ouroboros-consensus
---     ouroboros-consensus-byron
---     ouroboros-consensus-cardano
---     ouroboros-consensus-shelley
---     ouroboros-network
---     ouroboros-network-framework
---     ouroboros-network-testing
---     typed-protocols
---     typed-protocols-examples
--- 
--- source-repository-package
---   type: git
---   location: https://github.com/input-output-hk/plutus
---   tag: 826c2514a40e962c2e4d56ce912803a434cc28fe
---   --sha256: 04jryrgi2wggkf4a994smbcp8j39clshbzfnvfvvk7lq0sm8kssz
---   subdir:
---     plutus-core
---     plutus-ledger
---     plutus-ledger-api
---     plutus-tx
---     plutus-tx-plugin
---     prettyprinter-configurable
---     word-array
--- 
--- -- Drops an instance breaking our code. Should be released to Hackage eventually.
--- source-repository-package
---   type: git
---   location: https://github.com/Quid2/flat.git
---   tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
---   --sha256: 06l31x3y93rjpryvlxnpsyq2zyxvb0z6lik6yq2fvh36i5zwvwa3
--- 
--- constraints:
---     hedgehog >= 1.0
---   , bimap >= 0.4.0
---   , libsystemd-journal >= 1.4.4
---   , systemd >= 2.3.0
---     -- systemd-2.3.0 requires at least network 3.1.1.0 but it doesn't declare
---     -- that dependency
---   , network >= 3.1.1.0
--- 
--- package comonad
---   flags: -test-doctests
--- 
--- package cardano-ledger-alonzo-test
---   tests: False
--- 
--- allow-newer:
---   monoidal-containers:aeson,
---   size-based:template-haskell
+package cryptonite
+  -- Using RDRAND instead of /dev/urandom as an entropy source for key
+  -- generation is dubious. Set the flag so we use /dev/urandom by default.
+  flags: -support_rdrand
+
+package cardano-crypto-praos
+  flags: -external-libsodium-vrf
+
+-- ---------------------------------------------------------
+-- Disable all tests by default
+
+tests: False
+
+test-show-details: direct
+
+-- Then enable specific tests in this repo
+
+package cardano-api
+  tests: False
+
+package cardano-cli
+  tests: False
+
+package cardano-node
+  tests: False
+
+package cardano-node-chairman
+  tests: False
+
+package cardano-testnet
+  tests: False
+
+-- The following is needed because Nix is doing something crazy.
+package byron-spec-ledger
+  tests: False
+
+package iohk-monitoring
+  tests: False
+
+package ouroboros-consensus-test
+  tests: False
+
+package ouroboros-consensus-cardano-test
+  tests: False
+
+package ouroboros-network
+  tests: False
+
+package ouroboros-network-framework
+  tests: False
+
+package plutus-tx
+  tests: False
+
+package prettyprinter-configurable
+  tests: False
+
+package small-steps
+  tests: False
+
+package small-steps-test
+  tests: False
+
+package goblins
+  tests: False
+
+package io-classes
+  tests: False
+
+package cardano-ledger-alonzo-test
+  tests: False
+
+-- ---------------------------------------------------------
+
+-- The two following one-liners will cut off / restore the remainder of this file (for nix-shell users):
+-- when using the "cabal" wrapper script provided by nix-shell.
+-- --------------------------- 8< --------------------------
+-- Please do not put any `source-repository-package` clause above this line.
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-node
+  tag: 708de685d49ec6af4b2d8b3cbfa0eca0e9e43edf
+  subdir:
+    cardano-api
+
+-- Using a fork until our patches can be merged upstream
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/optparse-applicative
+  tag: 3876479d01d681ee529d1b26784335cbe0baf7cd
+  --sha256: 00gavws6jvl930rq09gs5rdwmyc4n42avk7p9s7pjv52d205v967
+
+-- Using a fork until our patches can be merged upstream
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/criterion
+  tag: fb2e7be532db96255d203f86360230cae37130f3
+  --sha256: 14r9zkfa8zslky3969gaq27gi7yi9rlqv0h1iq7zam9l15z53vhr
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/hedgehog-extras
+  tag: edf6945007177a638fbeb8802397f3a6f4e47c14
+  --sha256: 0wc7qzkc7j4ns2rz562h6qrx2f8xyq7yjcb7zidnj7f6j0pcd0i9
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-base
+  tag: 8c732560b201b5da8e3bdf175c6eda73a32d64bc
+  --sha256: 0nwy03wyd2ks4qxg47py7lm18karjz6vs7p8knmn3zy72i3n9rfi
+  subdir:
+    base-deriving-via
+    binary
+    binary/test
+    cardano-crypto-class
+    cardano-crypto-praos
+    cardano-crypto-tests
+    measures
+    orphans-deriving-via
+    slotting
+    strict-containers
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-crypto
+  tag: f73079303f663e028288f9f4a9e08bcca39a923e
+  --sha256: 1n87i15x54s0cjkh3nsxs4r1x016cdw1fypwmr68936n3xxsjn6q
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-ledger-specs
+  tag: 30eca73a2f5c13f1fbed9a98a59540ac3d0c8afe
+  --sha256: 02klj4zpcl98p22n2v9nkjxxdf8mmw069mw4ddhlgr931bfigz6w
+  subdir:
+    alonzo/impl
+    byron/chain/executable-spec
+    byron/crypto
+    byron/crypto/test
+    byron/ledger/executable-spec
+    byron/ledger/impl
+    byron/ledger/impl/test
+    cardano-ledger-core
+    semantics/executable-spec
+    semantics/small-steps-test
+    shelley/chain-and-ledger/dependencies/non-integer
+    shelley/chain-and-ledger/executable-spec
+    shelley/chain-and-ledger/shelley-spec-ledger-test
+    shelley-ma/impl
+    shelley-ma/shelley-ma-test
+--TODO: disabled until it drops its dep on plutus-tx-plugin
+--  alonzo/test
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-prelude
+  tag: bb4ed71ba8e587f672d06edf9d2e376f4b055555
+  --sha256: 00h10l5mmiza9819p9v5q5749nb9pzgi20vpzpy1d34zmh6gf1cj
+  subdir:
+    cardano-prelude
+    cardano-prelude-test
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/goblins
+  tag: cde90a2b27f79187ca8310b6549331e59595e7ba
+  --sha256: 17c88rbva3iw82yg9srlxjv2ia5wjb9cyqw44hik565f5v9svnyg
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/iohk-monitoring-framework
+  tag: 808724ff8a19a33d0ed06f9ef59fbd900b08553c
+  --sha256: 0298dpl29gxzs9as9ha6y0w18hqwc00ipa3hzkxv7nlfrjjz8hmz
+  subdir:
+    contra-tracer
+    iohk-monitoring
+    plugins/backend-aggregation
+    plugins/backend-ekg
+    plugins/backend-monitoring
+    plugins/backend-trace-forwarder
+    plugins/scribe-systemd
+    tracer-transformers
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/Win32-network
+  tag: 3825d3abf75f83f406c1f7161883c438dac7277d
+  --sha256: 19wahfv726fa3mqajpqdqhnl9ica3xmf68i254q45iyjcpj1psqx
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/ouroboros-network
+  tag: e9cda57df7ea6969edbc3bfc4e117668277d09c8
+  --sha256: 1a91z6yvlhzlqrf7fy51fmmpm3ssk684h6pjgg022cdlsq56yif2
+  subdir:
+    io-sim
+    io-classes
+    monoidal-synchronisation
+    network-mux
+    ouroboros-consensus
+    ouroboros-consensus-byron
+    ouroboros-consensus-cardano
+    ouroboros-consensus-shelley
+    ouroboros-network
+    ouroboros-network-framework
+    ouroboros-network-testing
+    typed-protocols
+    typed-protocols-examples
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/plutus
+  tag: 826c2514a40e962c2e4d56ce912803a434cc28fe
+  --sha256: 04jryrgi2wggkf4a994smbcp8j39clshbzfnvfvvk7lq0sm8kssz
+  subdir:
+    plutus-core
+    plutus-ledger
+    plutus-ledger-api
+    plutus-tx
+    plutus-tx-plugin
+    prettyprinter-configurable
+    word-array
+
+-- Drops an instance breaking our code. Should be released to Hackage eventually.
+source-repository-package
+  type: git
+  location: https://github.com/Quid2/flat.git
+  tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
+  --sha256: 06l31x3y93rjpryvlxnpsyq2zyxvb0z6lik6yq2fvh36i5zwvwa3
+
+constraints:
+    hedgehog >= 1.0
+  , bimap >= 0.4.0
+  , libsystemd-journal >= 1.4.4
+  , systemd >= 2.3.0
+    -- systemd-2.3.0 requires at least network 3.1.1.0 but it doesn't declare
+    -- that dependency
+  , network >= 3.1.1.0
+
+package comonad
+  flags: -test-doctests
+
+package cardano-ledger-alonzo-test
+  tests: False
+
+allow-newer:
+  monoidal-containers:aeson,
+  size-based:template-haskell
