--- a/cabal.project
+++ b/cabal.project
@@ -1,4 +1,4 @@
-index-state: 2021-04-13T00:00:00Z
+index-state: 2021-04-30T00:00:00Z
 
 
 -- This configuration is known to work with GHC 8.10.4 and cabal 3.4.0.0.
@@ -7,7 +7,7 @@ index-state: 2021-04-13T00:00:00Z
 packages: .
 
 
---  -- FIXME: On some platforms, one may need to explicitly specify the locations of the `zlib`
+--  -- FIXME: On some platforms, one may need to explicitly specify the locations of certain
 --  --        header and library files.
 --  package zlib
 --    extra-include-dirs: /nix/store/m11lzq9kbi76yx339hqi98sjvv3l3jxh-zlib-1.2.11-dev/include
@@ -17,98 +17,54 @@ packages: .
 --    extra-lib-dirs:     /nix/store/qvgf4g9c5h3wzq4xjy566vc0pqgc9fjq-zlib-1.2.11/lib
 
 
+package plutus-ledger
+  ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors
+
+package cardano-api
+  ghc-options: -Werror
+
+package cardano-cli
+  ghc-options: -Werror
+
+package cardano-config
+  ghc-options: -Werror
+
+package cardano-node
+  ghc-options: -Werror
+
+package cardano-node-chairman
+  ghc-options: -Werror
+
+package tx-generator
+  ghc-options: -Werror
+
 package cryptonite
-  -- Using RDRAND instead of /dev/urandom as an entropy source for key
-  -- generation is dubious. Set the flag so we use /dev/urandom by default.
   flags: -support_rdrand
 
 package cardano-crypto-praos
   flags: -external-libsodium-vrf
 
--- ---------------------------------------------------------
--- Disable all tests by default
 
 tests: False
 
 test-show-details: direct
 
--- Then enable specific tests in this repo
 
-package cardano-api
-  tests: False
-
-package cardano-cli
-  tests: False
-
-package cardano-node
-  tests: False
-
-package cardano-node-chairman
-  tests: False
-
-package cardano-testnet
-  tests: False
-
--- The following is needed because Nix is doing something crazy.
-package byron-spec-ledger
-  tests: False
-
-package iohk-monitoring
-  tests: False
-
-package ouroboros-consensus-test
-  tests: False
-
-package ouroboros-consensus-cardano-test
-  tests: False
-
-package ouroboros-network
-  tests: False
-
-package ouroboros-network-framework
-  tests: False
-
-package plutus-tx
-  tests: False
-
-package prettyprinter-configurable
-  tests: False
-
-package small-steps
-  tests: False
-
-package small-steps-test
-  tests: False
-
-package goblins
-  tests: False
-
-package io-classes
-  tests: False
-
-package cardano-ledger-alonzo-test
-  tests: False
-
--- ---------------------------------------------------------
-
--- The two following one-liners will cut off / restore the remainder of this file (for nix-shell users):
--- when using the "cabal" wrapper script provided by nix-shell.
--- --------------------------- 8< --------------------------
--- Please do not put any `source-repository-package` clause above this line.
+-- ------------------------------------------------------------- --
+--                                                               --
+-- For developing with `nix-shell`:                              --
+-- 1.  Run `nix-shell`.                                          --
+-- 2.  Temporarily comment-out the lines following this comment. --
+-- 3.  Run `cabal build`.                                        --
+--                                                               --
+-- ------------------------------------------------------------- --
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node
-  tag: 708de685d49ec6af4b2d8b3cbfa0eca0e9e43edf
+  tag: cc78734d263d0eec2b12070380cdfea02a5a8342
   subdir:
     cardano-api
-
--- Using a fork until our patches can be merged upstream
-source-repository-package
-  type: git
-  location: https://github.com/input-output-hk/optparse-applicative
-  tag: 3876479d01d681ee529d1b26784335cbe0baf7cd
-  --sha256: 00gavws6jvl930rq09gs5rdwmyc4n42avk7p9s7pjv52d205v967
 
 -- Using a fork until our patches can be merged upstream
 source-repository-package
@@ -116,6 +72,13 @@ source-repository-package
   location: https://github.com/input-output-hk/criterion
   tag: fb2e7be532db96255d203f86360230cae37130f3
   --sha256: 14r9zkfa8zslky3969gaq27gi7yi9rlqv0h1iq7zam9l15z53vhr
+
+-- Using a fork until our patches can be merged upstream
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/optparse-applicative
+  tag: 84bcc6f18992a441886589a117249bfface8630e
+  --sha256: 09pr7m9gjsk8889m9d3mj75p69viv1acnrq63dgb11jl5gnnsblr
 
 source-repository-package
   type: git
@@ -126,8 +89,8 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: 8c732560b201b5da8e3bdf175c6eda73a32d64bc
-  --sha256: 0nwy03wyd2ks4qxg47py7lm18karjz6vs7p8knmn3zy72i3n9rfi
+  tag: cb0f19c85e5bb5299839ad4ed66af6fa61322cc4
+  --sha256: 0dnkfqcvbifbk3m5pg8kyjqjy0zj1l4vd23p39n6ym4q0bnib1cq
   subdir:
     base-deriving-via
     binary
@@ -143,14 +106,14 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-crypto
-  tag: f73079303f663e028288f9f4a9e08bcca39a923e
-  --sha256: 1n87i15x54s0cjkh3nsxs4r1x016cdw1fypwmr68936n3xxsjn6q
+  tag: 07397f0e50da97eaa0575d93bee7ac4b2b2576ec
+  --sha256: 06sdx5ndn2g722jhpicmg96vsrys89fl81k8290b3lr6b1b0w4m3
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: 30eca73a2f5c13f1fbed9a98a59540ac3d0c8afe
-  --sha256: 02klj4zpcl98p22n2v9nkjxxdf8mmw069mw4ddhlgr931bfigz6w
+  tag: d5b184a820853c7ba202efd615b8fadca1acb52c
+  --sha256: 04k5p6qwmfdza65gl5319r1ahdfwjnyqgzpfxdx0x2g5jcbimar4
   subdir:
     alonzo/impl
     byron/chain/executable-spec
@@ -173,8 +136,8 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-prelude
-  tag: bb4ed71ba8e587f672d06edf9d2e376f4b055555
-  --sha256: 00h10l5mmiza9819p9v5q5749nb9pzgi20vpzpy1d34zmh6gf1cj
+  tag: fd773f7a58412131512b9f694ab95653ac430852
+  --sha256: 02jddik1yw0222wd6q0vv10f7y8rdgrlqaiy83ph002f9kjx7mh6
   subdir:
     cardano-prelude
     cardano-prelude-test
@@ -209,8 +172,8 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: e9cda57df7ea6969edbc3bfc4e117668277d09c8
-  --sha256: 1a91z6yvlhzlqrf7fy51fmmpm3ssk684h6pjgg022cdlsq56yif2
+  tag: 877ce057ff6fb086474c8eaad53f2b7f0e0fce6b
+  --sha256: 1kp0qysfy3hl96a3a61rijascq36f1imh3z4jy0vyiygb6qrv47z
   subdir:
     io-sim
     io-classes
@@ -229,8 +192,8 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus
-  tag: 826c2514a40e962c2e4d56ce912803a434cc28fe
-  --sha256: 04jryrgi2wggkf4a994smbcp8j39clshbzfnvfvvk7lq0sm8kssz
+  tag: 8c83c4abe211b4bbcaca3cdf1b2c0e38d0eb683f
+  --sha256: 1643s1g3jlm9pgalpc3vpij1zqb1n8yv8irq6qc43gs9bvl0wc3l
   subdir:
     plutus-core
     plutus-ledger
@@ -243,9 +206,9 @@ source-repository-package
 -- Drops an instance breaking our code. Should be released to Hackage eventually.
 source-repository-package
   type: git
-  location: https://github.com/Quid2/flat.git
-  tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
-  --sha256: 06l31x3y93rjpryvlxnpsyq2zyxvb0z6lik6yq2fvh36i5zwvwa3
+  location: https://github.com/michaelpj/flat.git
+  tag: ee59880f47ab835dbd73bea0847dab7869fc20d8
+  --sha256: 1lrzknw765pz2j97nvv9ip3l1mcpf2zr4n56hwlz0rk7wq7ls4cm
 
 constraints:
     hedgehog >= 1.0
