--- a/mantis-oracle.cabal
+++ b/mantis-oracle.cabal
@@ -1,7 +1,7 @@
 cabal-version     : 2.4
 name              : mantis-oracle
 description       : This Cardano oracle reports structured data (namely, the `PlutuxTx.Data` type) to a transaction if the fee, as a quantity of a fungible token, is paid. It can be incorporated into other smart-contract scripts that use the oracle's value in their validation logic.
-version           : 0.2.0.0
+version           : 0.2.0.1
 author            : Brian W Bush <code@functionally.io>
 maintainer        : Brian W Bush <code@functionally.io>
 copyright         : (c) 2021 Brian W Bush
@@ -70,6 +70,7 @@ executable mantis-oracle
                    , mantis-oracle
                    , optparse-applicative
                    , plutus-ledger
+                   , plutus-tx
                    , text
    if flag(USE_PAB)
      build-depends : plutus-contract
