--- a/cabal.project
+++ b/cabal.project
@@ -61,6 +61,11 @@ test-show-details: direct
 
 source-repository-package
   type: git
+  location: https://bitbucket.org/functionally/mantis.git
+  tag: b3b1cdb90cee6ff59c2435a9617d52a34a7e9f8a
+
+source-repository-package
+  type: git
   location: https://github.com/input-output-hk/cardano-node
   tag: cc78734d263d0eec2b12070380cdfea02a5a8342
   subdir:
