--- a/mantis-oracle.cabal
+++ b/mantis-oracle.cabal
@@ -40,6 +40,7 @@ library
                    , bytestring
                    , cardano-api
                    , containers
+                   , mantis
                    , ouroboros-network
                    , plutus-ledger
                    , plutus-ledger-api
