--- a/cabal.project
+++ b/cabal.project
@@ -17,9 +17,6 @@ packages: .
 --    extra-lib-dirs:     /nix/store/qvgf4g9c5h3wzq4xjy566vc0pqgc9fjq-zlib-1.2.11/lib
 
 
-package plutus-ledger
-  ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors
-
 package cardano-api
   ghc-options: -Werror
 
@@ -62,28 +59,23 @@ test-show-details: direct
 source-repository-package
   type: git
   location: https://bitbucket.org/functionally/mantis.git
-  tag: b3b1cdb90cee6ff59c2435a9617d52a34a7e9f8a
+  tag: 821e389711c368629409038bd8cb487b5eadc39e
+  --sha256: 12xm7yk3lrr698zs09h2pz7k9mwb2r07ib1iljzcdxb85mx7jdir
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node
-  tag: cc78734d263d0eec2b12070380cdfea02a5a8342
+  tag: 4c59442958072657812c6c0bb8e0b4ab85ce1ba2
+  --sha256: 0pc26hrgdsf93h3qvp8m76axm4jspzclg6psn14mbaf1mkc1fxmx
   subdir:
     cardano-api
 
 -- Using a fork until our patches can be merged upstream
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/criterion
-  tag: fb2e7be532db96255d203f86360230cae37130f3
-  --sha256: 14r9zkfa8zslky3969gaq27gi7yi9rlqv0h1iq7zam9l15z53vhr
-
--- Using a fork until our patches can be merged upstream
-source-repository-package
-  type: git
   location: https://github.com/input-output-hk/optparse-applicative
-  tag: 84bcc6f18992a441886589a117249bfface8630e
-  --sha256: 09pr7m9gjsk8889m9d3mj75p69viv1acnrq63dgb11jl5gnnsblr
+  tag: 7497a29cb998721a9068d5725d49461f2bba0e7a
+  --sha256: 1gvsrg925vynwgqwplgjmp53vj953qyh3wbdf34pw21c8r47w35r
 
 source-repository-package
   type: git
@@ -117,8 +109,8 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: d5b184a820853c7ba202efd615b8fadca1acb52c
-  --sha256: 04k5p6qwmfdza65gl5319r1ahdfwjnyqgzpfxdx0x2g5jcbimar4
+  tag: 6aa1cd0a64a464371b94d4ac182e7e2cddc83a36
+  --sha256: 1yv2biqc2q01xn7i7h7d1yn8dzygnqn8mywpjfs1i0pa7gnf5q14
   subdir:
     alonzo/impl
     byron/chain/executable-spec
@@ -197,8 +189,8 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus
-  tag: 8c83c4abe211b4bbcaca3cdf1b2c0e38d0eb683f
-  --sha256: 1643s1g3jlm9pgalpc3vpij1zqb1n8yv8irq6qc43gs9bvl0wc3l
+  tag: edc6d4672c41de4485444122ff843bc86ff421a0
+  --sha256: 12dmxp11xlal8rr3371sir5q4f7gscmyl84nw6wm47mb5b28bk92
   subdir:
     plutus-core
     plutus-ledger
@@ -206,12 +198,13 @@ source-repository-package
     plutus-tx
     plutus-tx-plugin
     prettyprinter-configurable
+    stubs/plutus-ghc-stub
     word-array
 
 -- Drops an instance breaking our code. Should be released to Hackage eventually.
 source-repository-package
   type: git
-  location: https://github.com/michaelpj/flat.git
+  location: https://github.com/input-output-hk/flat
   tag: ee59880f47ab835dbd73bea0847dab7869fc20d8
   --sha256: 1lrzknw765pz2j97nvv9ip3l1mcpf2zr4n56hwlz0rk7wq7ls4cm
 
