--- a/mantra-oracle.cabal
+++ b/mantra-oracle.cabal
@@ -1,7 +1,7 @@
 cabal-version     : 2.4
 name              : mantra-oracle
 description       : This Cardano oracle reports structured data (namely, the `PlutuxTx.Data` type) to a transaction if the fee, as a quantity of a fungible token, is paid. It can be incorporated into other smart-contract scripts that use the oracle's value in their validation logic.
-version           : 0.3.3.0
+version           : 0.3.4.0
 author            : Brian W Bush <code@functionally.io>
 maintainer        : Brian W Bush <code@functionally.io>
 copyright         : (c) 2021 Brian W Bush
@@ -24,6 +24,7 @@ flag USE_PAB
 library
   hs-source-dirs   : src
   exposed-modules  : Mantra.Oracle
+                     Mantra.Oracle.Loop
                      Mantra.Oracle.Reader
                      Mantra.Oracle.Submit
                      Mantra.Oracle.Types
@@ -41,6 +42,7 @@ library
                    , bytestring
                    , cardano-api
                    , containers
+                   , delay
                    , mantra
                    , mtl
                    , ouroboros-network
@@ -49,7 +51,9 @@ library
                    , plutus-tx
                    , plutus-tx-plugin
                    , serialise
+                   , shake
                    , text
+                   , time
                    , unordered-containers
   if flag(USE_PAB)
     build-depends  : containers
