--- a/cabal.project
+++ b/cabal.project
@@ -47,181 +47,181 @@ tests: False
 test-show-details: direct
 
 
---  -- ------------------------------------------------------------- --
---  --                                                               --
---  -- For developing with `nix-shell`:                              --
---  -- 1.  Run `nix-shell`.                                          --
---  -- 2.  Temporarily comment-out the lines following this comment. --
---  -- 3.  Run `cabal build`.                                        --
---  --                                                               --
---  -- ------------------------------------------------------------- --
---  
---  source-repository-package
---    type: git
---    location: https://bitbucket.org/functionally/mantra.git
---    tag: ef5649496343907b62b6d3e2c82079c5851e8acd
---    --sha256: 13pbkiqk5pcg78rspsxakckvxxgl1wfn92yw484gihqh1b687zvb
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/cardano-node
---    tag: 0fb43f4e3da8b225f4f86557aed90a183981a64f
---    --sha256: 0mkir1pg78hp7adxgb8cz6jj4izs07np23fxxnwhkvf0ql92nan7
---    subdir:
---      cardano-api
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/optparse-applicative
---    tag: 7497a29cb998721a9068d5725d49461f2bba0e7a
---    --sha256: 1gvsrg925vynwgqwplgjmp53vj953qyh3wbdf34pw21c8r47w35r
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/hedgehog-extras
---    tag: edf6945007177a638fbeb8802397f3a6f4e47c14
---    --sha256: 0wc7qzkc7j4ns2rz562h6qrx2f8xyq7yjcb7zidnj7f6j0pcd0i9
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/cardano-base
---    tag: e8a48cf0500b03c744c7fc6f2fedb86e8bdbe055
---    --sha256: 0s3w796y4bgjidg5iwapdq88cq9ipy346gagbip6xlqxdvpp99xj
---    subdir:
---      base-deriving-via
---      binary
---      binary/test
---      cardano-crypto-class
---      cardano-crypto-praos
---      cardano-crypto-tests
---      measures
---      orphans-deriving-via
---      slotting
---      strict-containers
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/cardano-crypto
---    tag: 07397f0e50da97eaa0575d93bee7ac4b2b2576ec
---    --sha256: 06sdx5ndn2g722jhpicmg96vsrys89fl81k8290b3lr6b1b0w4m3
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/cardano-ledger-specs
---    tag: f827a4321e42f528e25f6079f7af3eb18f10d391
---    --sha256: 0dmgxg7cpgz4lnscqrrk4gakw9w90dx8ljv5wr923rfp9nyzc5qf
---    subdir:
---      alonzo/impl
---      byron/chain/executable-spec
---      byron/crypto
---      byron/crypto/test
---      byron/ledger/executable-spec
---      byron/ledger/impl
---      byron/ledger/impl/test
---      cardano-ledger-core
---      semantics/executable-spec
---      semantics/small-steps-test
---      shelley/chain-and-ledger/dependencies/non-integer
---      shelley/chain-and-ledger/executable-spec
---      shelley/chain-and-ledger/shelley-spec-ledger-test
---      shelley-ma/impl
---      shelley-ma/shelley-ma-test
---  --TODO: disabled until it drops its dep on plutus-tx-plugin
---  --  alonzo/test
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/cardano-prelude
---    tag: fd773f7a58412131512b9f694ab95653ac430852
---    --sha256: 02jddik1yw0222wd6q0vv10f7y8rdgrlqaiy83ph002f9kjx7mh6
---    subdir:
---      cardano-prelude
---      cardano-prelude-test
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/goblins
---    tag: cde90a2b27f79187ca8310b6549331e59595e7ba
---    --sha256: 17c88rbva3iw82yg9srlxjv2ia5wjb9cyqw44hik565f5v9svnyg
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/iohk-monitoring-framework
---    tag: 808724ff8a19a33d0ed06f9ef59fbd900b08553c
---    --sha256: 0298dpl29gxzs9as9ha6y0w18hqwc00ipa3hzkxv7nlfrjjz8hmz
---    subdir:
---      contra-tracer
---      iohk-monitoring
---      plugins/backend-aggregation
---      plugins/backend-ekg
---      plugins/backend-monitoring
---      plugins/backend-trace-forwarder
---      plugins/scribe-systemd
---      tracer-transformers
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/Win32-network
---    tag: 3825d3abf75f83f406c1f7161883c438dac7277d
---    --sha256: 19wahfv726fa3mqajpqdqhnl9ica3xmf68i254q45iyjcpj1psqx
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/ouroboros-network
---    tag: aa7bc087737edca29133844b14bb7cba2cd213f2
---    --sha256: 1rcjlj5z8igrfy07lkdrlm4xcx9a3g0jl69wvqk0vvff4hfr00ar
---    subdir:
---      io-sim
---      io-classes
---      monoidal-synchronisation
---      network-mux
---      ouroboros-consensus
---      ouroboros-consensus-byron
---      ouroboros-consensus-cardano
---      ouroboros-consensus-shelley
---      ouroboros-network
---      ouroboros-network-framework
---      ouroboros-network-testing
---      typed-protocols
---      typed-protocols-examples
---  
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/plutus
---    tag: edc6d4672c41de4485444122ff843bc86ff421a0
---    --sha256: 12dmxp11xlal8rr3371sir5q4f7gscmyl84nw6wm47mb5b28bk92
---    subdir:
---      plutus-core
---      plutus-ledger
---      plutus-ledger-api
---      plutus-tx
---      plutus-tx-plugin
---      prettyprinter-configurable
---      stubs/plutus-ghc-stub
---      word-array
---  
---  -- Drops an instance breaking our code. Should be released to Hackage eventually.
---  source-repository-package
---    type: git
---    location: https://github.com/input-output-hk/flat
---    tag: ee59880f47ab835dbd73bea0847dab7869fc20d8
---    --sha256: 1lrzknw765pz2j97nvv9ip3l1mcpf2zr4n56hwlz0rk7wq7ls4cm
---  
---  constraints:
---      hedgehog >= 1.0
---    , bimap >= 0.4.0
---    , libsystemd-journal >= 1.4.4
---    , systemd >= 2.3.0
---      -- systemd-2.3.0 requires at least network 3.1.1.0 but it doesn't declare
---      -- that dependency
---    , network >= 3.1.1.0
---  
---  package comonad
---    flags: -test-doctests
---  
---  package cardano-ledger-alonzo-test
---    tests: False
---  
---  allow-newer:
---    monoidal-containers:aeson,
---    size-based:template-haskell
+-- ------------------------------------------------------------- --
+--                                                               --
+-- For developing with `nix-shell`:                              --
+-- 1.  Run `nix-shell`.                                          --
+-- 2.  Temporarily comment-out the lines following this comment. --
+-- 3.  Run `cabal build`.                                        --
+--                                                               --
+-- ------------------------------------------------------------- --
+
+source-repository-package
+  type: git
+  location: https://bitbucket.org/functionally/mantra.git
+  tag: ef5649496343907b62b6d3e2c82079c5851e8acd
+  --sha256: 13pbkiqk5pcg78rspsxakckvxxgl1wfn92yw484gihqh1b687zvb
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-node
+  tag: 0fb43f4e3da8b225f4f86557aed90a183981a64f
+  --sha256: 0mkir1pg78hp7adxgb8cz6jj4izs07np23fxxnwhkvf0ql92nan7
+  subdir:
+    cardano-api
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/optparse-applicative
+  tag: 7497a29cb998721a9068d5725d49461f2bba0e7a
+  --sha256: 1gvsrg925vynwgqwplgjmp53vj953qyh3wbdf34pw21c8r47w35r
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/hedgehog-extras
+  tag: edf6945007177a638fbeb8802397f3a6f4e47c14
+  --sha256: 0wc7qzkc7j4ns2rz562h6qrx2f8xyq7yjcb7zidnj7f6j0pcd0i9
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-base
+  tag: e8a48cf0500b03c744c7fc6f2fedb86e8bdbe055
+  --sha256: 0s3w796y4bgjidg5iwapdq88cq9ipy346gagbip6xlqxdvpp99xj
+  subdir:
+    base-deriving-via
+    binary
+    binary/test
+    cardano-crypto-class
+    cardano-crypto-praos
+    cardano-crypto-tests
+    measures
+    orphans-deriving-via
+    slotting
+    strict-containers
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-crypto
+  tag: 07397f0e50da97eaa0575d93bee7ac4b2b2576ec
+  --sha256: 06sdx5ndn2g722jhpicmg96vsrys89fl81k8290b3lr6b1b0w4m3
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-ledger-specs
+  tag: f827a4321e42f528e25f6079f7af3eb18f10d391
+  --sha256: 0dmgxg7cpgz4lnscqrrk4gakw9w90dx8ljv5wr923rfp9nyzc5qf
+  subdir:
+    alonzo/impl
+    byron/chain/executable-spec
+    byron/crypto
+    byron/crypto/test
+    byron/ledger/executable-spec
+    byron/ledger/impl
+    byron/ledger/impl/test
+    cardano-ledger-core
+    semantics/executable-spec
+    semantics/small-steps-test
+    shelley/chain-and-ledger/dependencies/non-integer
+    shelley/chain-and-ledger/executable-spec
+    shelley/chain-and-ledger/shelley-spec-ledger-test
+    shelley-ma/impl
+    shelley-ma/shelley-ma-test
+--TODO: disabled until it drops its dep on plutus-tx-plugin
+--  alonzo/test
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-prelude
+  tag: fd773f7a58412131512b9f694ab95653ac430852
+  --sha256: 02jddik1yw0222wd6q0vv10f7y8rdgrlqaiy83ph002f9kjx7mh6
+  subdir:
+    cardano-prelude
+    cardano-prelude-test
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/goblins
+  tag: cde90a2b27f79187ca8310b6549331e59595e7ba
+  --sha256: 17c88rbva3iw82yg9srlxjv2ia5wjb9cyqw44hik565f5v9svnyg
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/iohk-monitoring-framework
+  tag: 808724ff8a19a33d0ed06f9ef59fbd900b08553c
+  --sha256: 0298dpl29gxzs9as9ha6y0w18hqwc00ipa3hzkxv7nlfrjjz8hmz
+  subdir:
+    contra-tracer
+    iohk-monitoring
+    plugins/backend-aggregation
+    plugins/backend-ekg
+    plugins/backend-monitoring
+    plugins/backend-trace-forwarder
+    plugins/scribe-systemd
+    tracer-transformers
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/Win32-network
+  tag: 3825d3abf75f83f406c1f7161883c438dac7277d
+  --sha256: 19wahfv726fa3mqajpqdqhnl9ica3xmf68i254q45iyjcpj1psqx
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/ouroboros-network
+  tag: aa7bc087737edca29133844b14bb7cba2cd213f2
+  --sha256: 1rcjlj5z8igrfy07lkdrlm4xcx9a3g0jl69wvqk0vvff4hfr00ar
+  subdir:
+    io-sim
+    io-classes
+    monoidal-synchronisation
+    network-mux
+    ouroboros-consensus
+    ouroboros-consensus-byron
+    ouroboros-consensus-cardano
+    ouroboros-consensus-shelley
+    ouroboros-network
+    ouroboros-network-framework
+    ouroboros-network-testing
+    typed-protocols
+    typed-protocols-examples
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/plutus
+  tag: edc6d4672c41de4485444122ff843bc86ff421a0
+  --sha256: 12dmxp11xlal8rr3371sir5q4f7gscmyl84nw6wm47mb5b28bk92
+  subdir:
+    plutus-core
+    plutus-ledger
+    plutus-ledger-api
+    plutus-tx
+    plutus-tx-plugin
+    prettyprinter-configurable
+    stubs/plutus-ghc-stub
+    word-array
+
+-- Drops an instance breaking our code. Should be released to Hackage eventually.
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/flat
+  tag: ee59880f47ab835dbd73bea0847dab7869fc20d8
+  --sha256: 1lrzknw765pz2j97nvv9ip3l1mcpf2zr4n56hwlz0rk7wq7ls4cm
+
+constraints:
+    hedgehog >= 1.0
+  , bimap >= 0.4.0
+  , libsystemd-journal >= 1.4.4
+  , systemd >= 2.3.0
+    -- systemd-2.3.0 requires at least network 3.1.1.0 but it doesn't declare
+    -- that dependency
+  , network >= 3.1.1.0
+
+package comonad
+  flags: -test-doctests
+
+package cardano-ledger-alonzo-test
+  tests: False
+
+allow-newer:
+  monoidal-containers:aeson,
+  size-based:template-haskell
